add_executable(listing_2.1 listing_2.1.cpp)
target_link_libraries(listing_2.1 pthread)

add_executable(listing_2.2 listing_2.2.cpp)
target_link_libraries(listing_2.2 pthread)

add_executable(listing_2.3 listing_2.3.cpp)
target_link_libraries(listing_2.3 pthread)

add_executable(listing_2.4 listing_2.4.cpp)
target_link_libraries(listing_2.4 pthread)

add_executable(listing_2.5 listing_2.5.cpp)
target_link_libraries(listing_2.5 pthread)

add_executable(listing_2.6 listing_2.6.cpp)
target_link_libraries(listing_2.6 pthread)

add_executable(listing_2.7 listing_2.7.cpp)
target_link_libraries(listing_2.7 pthread)

add_executable(listing_2.8 listing_2.8.cpp)
target_link_libraries(listing_2.8 pthread)