add_executable(listing_3.1 listing_3.1.cpp)
target_link_libraries(listing_3.1 pthread)

add_executable(listing_3.2 listing_3.2.cpp)
target_link_libraries(listing_3.2 pthread)

add_executable(listing_3.3 listing_3.3.cpp)
target_link_libraries(listing_3.3 pthread)

add_executable(listing_3.4 listing_3.4.cpp)
target_link_libraries(listing_3.4 pthread)

add_executable(listing_3.5 listing_3.5.cpp)
target_link_libraries(listing_3.5 pthread)

add_executable(listing_3.6 listing_3.6.cpp)
target_link_libraries(listing_3.6 pthread)

add_executable(listing_3.7 listing_3.7.cpp)
target_link_libraries(listing_3.7 pthread)

add_executable(listing_3.8 listing_3.8.cpp)
target_link_libraries(listing_3.8 pthread)

add_executable(listing_3.9 listing_3.9.cpp)
target_link_libraries(listing_3.9 pthread)

add_executable(listing_3.10 listing_3.10.cpp)
target_link_libraries(listing_3.10 pthread)

add_executable(listing_3.11 listing_3.11.cpp)
target_link_libraries(listing_3.11 pthread)

add_executable(listing_3.12 listing_3.12.cpp)
target_link_libraries(listing_3.12 pthread)

add_executable(listing_3.13 listing_3.13.cpp)
target_link_libraries(listing_3.13 boost_thread boost_system)
