add_executable(listing_4.1 listing_4.1.cpp)
target_link_libraries(listing_4.1 pthread)

# add_executable(listing_4.2 listing_4.2.cpp)
# target_link_libraries(listing_4.2 pthread)

add_executable(listing_4.3 listing_4.3.cpp)
target_link_libraries(listing_4.3 pthread)

# add_executable(listing_4.4 listing_4.4.cpp)
# target_link_libraries(listing_4.4 pthread)

add_executable(listing_4.5 listing_4.5.cpp)
target_link_libraries(listing_4.5 pthread)

add_executable(listing_4.6 listing_4.6.cpp)
target_link_libraries(listing_4.6 pthread)

# add_executable(listing_4.7 listing_4.7.cpp)
# target_link_libraries(listing_4.7 pthread)

# add_executable(listing_4.8 listing_4.8.cpp)
# target_link_libraries(listing_4.8 pthread)

# add_executable(listing_4.9 listing_4.9.cpp)
# target_link_libraries(listing_4.9 pthread)

# add_executable(listing_4.10 listing_4.10.cpp)
# target_link_libraries(listing_4.10 pthread)

# add_executable(listing_4.11 listing_4.11.cpp)
# target_link_libraries(listing_4.11 pthread)

# add_executable(listing_4.12 listing_4.12.cpp)
# target_link_libraries(listing_4.12 pthread)

# add_executable(listing_4.13 listing_4.13.cpp)
# target_link_libraries(listing_4.13 pthread)

# add_executable(listing_4.14 listing_4.14.cpp)
# target_link_libraries(listing_4.14 pthread)

# add_executable(listing_4.15 listing_4.15.cpp)
# target_link_libraries(listing_4.15 pthread)

# add_executable(listing_4.16 listing_4.16.cpp)
# target_link_libraries(listing_4.16 pthread)
