add_library(ch05 listing_5.01.cpp listing_5.02.cpp)

add_executable(listing_5.03 listing_5.03.cpp)
target_link_libraries(listing_5.03 pthread)

add_executable(listing_5.04 listing_5.04.cpp)
target_link_libraries(listing_5.04 pthread)

add_executable(listing_5.05 listing_5.05.cpp)
target_link_libraries(listing_5.05 pthread)

add_executable(listing_5.06 listing_5.06.cpp)
target_link_libraries(listing_5.06 pthread)

add_executable(listing_5.07 listing_5.07.cpp)
target_link_libraries(listing_5.07 pthread)

add_executable(listing_5.08 listing_5.08.cpp)
target_link_libraries(listing_5.08 pthread)

add_executable(listing_5.09 listing_5.09.cpp)
target_link_libraries(listing_5.09 pthread)

add_executable(listing_5.10 listing_5.10.cpp)
target_link_libraries(listing_5.10 pthread)

add_executable(listing_5.11 listing_5.11.cpp)
target_link_libraries(listing_5.11 pthread)

add_executable(listing_5.12 listing_5.12.cpp)
target_link_libraries(listing_5.12 pthread)

add_executable(listing_5.13 listing_5.13.cpp)
target_link_libraries(listing_5.13 pthread)
